# gravimera

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  config.example.toml  gen_3d.md
assest/: example_prompts.md
assets/: example_prompts.md  icon.icns
docs/: automation_http_api.md  controls.md  developer_onboarding.md  development.md  floor_import_export.md  gen3d_assumptions_heuristics_todo.md  gen3d_code_review_prompt.md  gen3d_real_test_issues.md  intelligence_service.md  intelligence_wasm_brains.md  licensing.md  meta_speak.md  object_system.md  prefab_export_glb.md  prefab_export_gltf_glb.md  prefab_import_export.md  prompts.md  publishing.md  refactor_todo.md  scene_import_export.md  sky.md  terrain_import_export.md  todo.md  water.md  workspaces.md
plans/: 2026-03-20-gen3d-prefabs-inflight-concurrency-v1.md  2026-03-21-gen3d-concurrency-cap3-execplan.md  2026-03-27-scene-floor-selection-v1.md  2026-03-28-prefab-export-glb.md  2026-03-29-prefab-export-gltf-glb.md  2026-03-29-publish-multi-target-macos.md  2026-03-29-terrain-scene-management.md  2026-03-30-move-command-no-marker-v1.md  2026-03-30-terrain-height-grounding-water.md  2026-03-31-gen3d-preview-animation-export.md  2026-04-02-genscene-rebuild-v1.md  2026-04-02-intelligence-wasm-brains-desktop-v1.md  2026-04-03-scene-display-name-v1.md  2026-04-05-gen3d-manual-tweak-mode.md  2026-04-05-showcase-scene-v1.md  2026-04-05-showcase-scene-wasteland-v1.md  floor_bulk_import_export.md  prefab_bulk_import_export.md
src/: action_log.rs  action_log_ui.rs  ai_limiter.rs  app.rs  app_plugins.rs  assets.rs  build.rs  clipboard.rs  combat.rs  common.rs  config.rs  console.rs  constants.rs  cursor_pick.rs  effects.rs  enemies.rs  floor_library_ui.rs  floor_zip.rs  geometry.rs  headless.rs  import_conflicts.rs  lib.rs  locomotion.rs  main.rs  meta_speak.rs  model_depot.rs  model_library_ui.rs  model_tool.rs  models.rs  monitor_mode.rs  motion.rs  motion_ui.rs  navigation.rs  object_forms.rs  openai_shared.rs  orbit_capture.rs  paths.rs  physics.rs  platform.rs  player.rs  (+34 more)
test/: monitor_real_test.py  monitor_test_config.toml
tests/: automation_api_smoke.rs  intelligence_service_smoke.rs  meta_speak_adapter.rs  scene_layer_kinds_v1_compile_regen.rs  scene_layers_compile_regen.rs  scene_runs_resume.rs  scene_sources_patch_apply.rs  scene_sources_roundtrip.rs  scene_validation_scorecards.rs
tools/: gen3d_export_example_prompts.py  (+9 more)
(+409 files in other folders)
