[package]
name = "gravimera"
version = "0.1.0"
edition = "2021"
rust-version = "1.93.0"
default-run = "gravimera"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
  "default_app",
  "default_platform",
  "3d_bevy_render",
  "ui_bevy_render",
  "debug",
  "jpeg",
  "png",
  "webp",
] }
emojis = "0.8"
image = "0.25"
rand = "0.8"
json5 = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
prost = "0.13"
unicode-segmentation = "1.11"
uuid = { version = "1", features = ["v4", "v5"] }
wgpu = { version = "27", default-features = false }
tiny_http = "0.12"
winit = "0.30"
zip = "0.6"
rfd = "0.15"
soundtest = { path = "third_party/soundtest" }
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic", "ndarray", "std"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11rb = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false
